ATA-5987: prevent header wrapping on small screens

--- a/prism-management-console-web/src/components/connections/_style.scss
+++ b/prism-management-console-web/src/components/connections/_style.scss
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    flex-wrap: nowrap;
     align-items: center;
     border-bottom: 1px solid $light-grey;
     .title {
